--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@
 /build
 /captures
 .externalNativeBuild
+
+# Intellij
+*.iml
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/dictionaries
+.idea/libraries
